Adding JUnit dependency